--- a/project-model-training.ipynb
+++ b/project-model-training.ipynb
@@ -148,18 +148,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "09809135-6dc4-4a02-bebc-200811249230",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Loading fFile paths\n",
-    "TRAIN_LABELS_PATH = '/home/ruskaruma/Desktop/projects/Kaggle-Assignment/train_labels.csv'\n",
-    "SAMPLE_SUBMISSION_PATH = '/home/ruskaruma/Desktop/projects/Kaggle-Assignment/sample_submission.csv'\n",
-    "TRAIN_PDF_PATH = '/home/ruskaruma/Desktop/projects/Kaggle-Assignment/train/PDF'\n",
-    "TRAIN_XML_PATH = '/home/ruskaruma/Desktop/projects/Kaggle-Assignment/train/XML'\n",
-    "TEST_PDF_PATH = '/home/ruskaruma/Desktop/projects/Kaggle-Assignment/test/PDF'\n",
-    "TEST_XML_PATH = '/home/ruskaruma/Desktop/projects/Kaggle-Assignment/test/XML'"
+    "TRAIN_LABELS_PATH = 'C:\\Users\\yash1\\Github\\dl-project/data/train_labels.csv'\n",
+    "SAMPLE_SUBMISSION_PATH = 'C:\\Users\\yash1\\Github\\dl-project/data/sample_submission.csv'\n",
+    "TRAIN_PDF_PATH = 'C:\\Users\\yash1\\Github\\dl-project/data/train/PDF'\n",
+    "TRAIN_XML_PATH = 'C:\\Users\\yash1\\Github\\dl-project/data/train/XML'\n",
+    "TEST_PDF_PATH = 'C:\\Users\\yash1\\Github\\dl-project/data/test/PDF'\n",
+    "TEST_XML_PATH = 'C:\\Users\\yash1\\Github\\dl-project/data/test/XML'"
    ]
   },
   {
