--- a/project-model-training.ipynb
+++ b/project-model-training.ipynb
@@ -5,6 +5,18 @@
    "id": "78040ace-1658-4118-a429-a4d41cb9cf16",
    "metadata": {},
    "source": [
+    " # YASH RAJ TRIPATHY FOR GEN AI INTERNSHIP \n",
+    " ### A document classification system powered by BERT (Bidirectional Encoder Representations from Transformers)\n",
+    " ### The dataset was picked from the Make Data Count - Finding Data References competition on Kaggle.\n",
+    " ### I have used all of these libraries:torch, transformers, scikit-learn, joblib, fastapi, uvicorn, python-multipart, PyMuPDF, tqdm, matplotlib, seaborn, nltk, re, os, glob, string, json, warnings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fced29a",
+   "metadata": {},
+   "source": [
+    "\n",
     " ### SETUP AND IMPORTS ###"
    ]
   },
@@ -110,27 +122,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "f5c03f49-9b6d-4598-8e50-0aadb8d9f265",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CUDA available: True\n",
-      "GPU: NVIDIA GeForce RTX 4060 Laptop GPU\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Checking GPU availability\n",
-    "print(f\"CUDA available: {torch.cuda.is_available()}\")\n",
-    "print(f\"GPU: {torch.cuda.get_device_name(0) if torch.cuda.is_available() else 'None'}\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "b258fcf4-ccc5-423f-99b1-53252a75a0d8",
    "metadata": {},
@@ -230,25 +221,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "a718c13d-56b6-43a8-8be4-b0327c401794",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Path verification:\n",
-      "Train Labels: ✓ /home/ruskaruma/Desktop/projects/Kaggle-Assignment/train_labels.csv\n",
-      "Sample Submission: ✓ /home/ruskaruma/Desktop/projects/Kaggle-Assignment/sample_submission.csv\n",
-      "Train PDF: ✓ /home/ruskaruma/Desktop/projects/Kaggle-Assignment/train/PDF\n",
-      "Train XML: ✓ /home/ruskaruma/Desktop/projects/Kaggle-Assignment/train/XML\n",
-      "Test PDF: ✓ /home/ruskaruma/Desktop/projects/Kaggle-Assignment/test/PDF\n",
-      "Test XML: ✓ /home/ruskaruma/Desktop/projects/Kaggle-Assignment/test/XML\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Verify paths exist\n",
     "print(\"\\nPath verification:\")\n",
